--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,47 @@ header {
 }
 
 nav {
+    color: #ffffff;
+    display: flex;
+    flex-direction: flex-start;
+    justify-content: start;
     background-color: #1f1f1f;
+    padding: 8px;
+
 }
 
-.menu-container {
-    display: flex;
-    just
+nav h2 {
+    margin: auto 0 auto 0;
+    text-align: center;
 }
+
+nav a {
+    text-transform: uppercase;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 12px;
+    margin: 2px;
+    border-bottom: 4px solid #F05514;
+    text-align: center;
+
+}
+
+nav a.active {
+    background-color: #ffffff;
+    color:#1f1f1f;
+    border-radius: 12px 12px 0 0;
+}
+
+.push {
+    margin-left: auto;
+}
+
+nav a:hover {
+    background-color: #ffffff;
+    color: #1f1f1f;
+    border-radius: 12px 12px 0 0;
+
+}
+
+
+
