--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,67 @@ nav a:hover {
     border-radius: 12px 12px 0 0;
 
 }
-
+.footer {
+    background-color: #f5f5f5; 
+    border-top: 1px solid #ccc;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .footer-section {
+    flex: 1;
+    min-width: 200px;
+    margin-bottom: 5px;
+  }
+  
+  .footer-section h4 {
+    font-size: 16px;
+    color: #777;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+  .footer-contact {
+    margin-right: 700px;
+  }
+  .footer-contact h4 {
+    color: #777;
+  }
+  
+  .footer-section ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .footer-section ul li {
+    margin-bottom: 4px;
+  }
+  
+  .footer-section p {
+    margin: 0;
+  }
+  
+  .footer-icons {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .footer-icons .icon-x,
+  .footer-icons .icon-instagram,
+  .footer-icons .icon-facebook {
+    font-size: 18px;
+    color: #777;
+    cursor: pointer;
+  }
+  
+  .footer-bottom {
+    text-align: center;
+    font-size: 12px;
+    color: #777;
+    width: 100%;
+    margin-top: 10px;
+  }
 
 
